--- a/typing/index.html
+++ b/typing/index.html
@@ -3,41 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Typing Game</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Typing speed</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
-        <input type="text" class="input-field" title="text"/>
-        <div class="content-box">
-            <div class="typing-text">
-                <p>Lorem ipsum dolor sit amet consectetur 
-                    adipisicing elit. Vero sunt impedit 
-                    odit. Ipsum?</p>
-            </div>
-            <div class="content"> <!-- Fixed class name from 'containt' to 'content' -->
-                <ul class="result-details">
-                    <li class="time">
-                        <p>Time Left: </p>
-                        <span><b>60</b>s</span>
-                    </li>
-                    <li class="mistake">
-                        <p>Mistake:</p>
-                        <span>0</span>
-                    </li>
-                    <li class="wpm">
-                        <p>WPM:</p>
-                        <span>0</span>
-                    </li>
-                    <li class="cpm">
-                        <p>CPM:</p>
-                        <span>0</span> <!-- Added missing value inside CPM span -->
-                    </li>
-                </ul>
-                 <button>Try Again</button>
-            </div>
+      <div class="dark-mode-toggle">
+        <label>
+          <input type="checkbox" id="darkModeToggle" />
+          Dark Mode
+        </label>
+      </div>
+  
+      <input type="text" class="input-field" title="text" />
+  
+      <div class="content-box">
+        <div class="typing-text">
+          <p></p>
+          <div class="progress-bar"><div class="progress"></div></div> <!-- Progress Bar -->
         </div>
+  
+        <div class="content">
+          <div class="stats-container">
+            <div class="stat-box wpm-stat">
+                <div class="stat-value">0</div>
+                <div class="stat-label">WPM</div>
+            </div>
+            <div class="stat-box cpm-stat">
+                <div class="stat-value">0</div>
+                <div class="stat-label">CPM</div>
+            </div>
+            <div class="stat-box mistakes-stat">
+                <div class="stat-value">0</div>
+                <div class="stat-label">Mistakes</div>
+            </div>
+          </div>
+          <button>Try Again</button>
+        </div>
+      </div>
     </div>
+  
+    <!-- Summary Modal -->
+    <div class="modal" id="summaryModal">
+      <div class="modal-content">
+        <h2>Game Over</h2>
+        <p id="summaryText"></p>
+        <button onclick="closeModal()">Close</button>
+      </div>
+    </div>
+  
     <script src="script.js"></script>
-</body>
+  </body>
+  
 </html>
