--- a/jstutorial/index.html
+++ b/jstutorial/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The JS Tutorial</title>
 </head>
 <body>
+
+    <div>
+        <h1>Helo here we are doing js  basics</h1>
+    </div>
     <script src="day1.js"></script>
 </body>
 </html>
