adding updated jstutorial

--- a/jstutorial/index.html
+++ b/jstutorial/index.html
@@ -11,5 +11,6 @@
         <h1>Helo here we are doing js  basics</h1>
     </div>
     <script src="day1.js"></script>
+    <script src="day2.js"></script>
 </body>
 </html>
