--- a/jstutorial/Dom/dom1.html
+++ b/jstutorial/Dom/dom1.html
@@ -8,7 +8,8 @@
 <body>
     <div>Top 3 sigmas
     <ul >
-        <li id="hero">Anderew tate</li>
+        <li>Nobita</li>
+        <li class="hero">Anderew tate</li>
         <li class="qs">bravo</li>
         <li class="qs">shinchan</li>
     </ul>
