--- a/jstutorial/mouse.html
+++ b/jstutorial/mouse.html
@@ -21,12 +21,12 @@
     onmouseup="changeColorUp()">Change color</button>
     <script>
         function changeColorDown(){
-        var div = document.getElementById("myDiv")
-        div.style.backgroundColor='pink'
+        var div = document.getElementById("myDiv");
+        div.style.backgroundColor='pink';
         }
         function changeColorUp(){
-            var div = document.getElementById("myDiv")
-            div.style.backgroundColor='red'
+            var div = document.getElementById("myDiv");
+            div.style.backgroundColor='red';
         }
     </script>
 </body>
