adding new files

--- a/jstutorial/eventdelegation.html
+++ b/jstutorial/eventdelegation.html
@@ -31,32 +31,14 @@
     </div>
 </body>
 <script>
-    const body = document.
-    getElementsByTagName('body')[0];
-     const div = document.
-    getElementsByTagName('div')[0];
-     const span = document.
-    getElementsByTagName('span')[0];
-     const button = document.
-    getElementsByTagName('button')[0];
-
-    body.addEventListener('click' , ()=>{
-        console.log("body was clicked")
-    })
-
-     span.addEventListener('click' , ()=>{
-        
-        console.log("span was clicked")
-    })
-
-     div.addEventListener('click' , ()=>{
-       
-        console.log("div was clicked")
-    })
-
-     button.addEventListener('click' , (event)=>{
-        event.stopPropagation()
-        console.log("button was clicked")
-    })
+   const div = document.getElementsByTagName('div')[0]
+   div.addEventListener('click',(event) => {
+    if(event.target.TagName == 'BUTTON'){
+        console.log("Button was clicked")
+    }  else if(event.target.tagName == 'SPAN'){
+        console.log("Span was clicked")
+    } else{
+        console.log('Div was clicked')
+    }})
 </script>
 </html>
